
Known problems:
    1. The "_parent" and "_empty" frame targets are not handled correctly
    2. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. HttpUnit does not support JavaScript
    2. JDK 1.2 or higher is required


Revision History:

22-Feb-2000 1.3.5
Acknowledgements:
    Thanks to Didier Besset for correcting the WebForm methods: hasParameterNamed and hasParameterStartingWithPrefix
    Thanks to Stefan G. Renz for identifying the infinite loop bug in frame handling
    Thanks to Alex Chaffee for implementing context parameters for web.xml in ServletUnit
    Thanks to Jochen Hiller for supplying code to use jaxp to select a parser rather than being hardcoded to xerces

Problems fixed:
    1. hasParameterNamed and hasParameterStartingWithPrefix now check all types of parameters, not just <INPUT> fields
    2. (bug #492003) JTidyPrintWriter fails to parse columns
    3. Empty cookies were not being recognized.
    4. Parameters are now submitted in the order specified in the form, as long as parameter validation is not turned off.
    5. It is no longer permitted to change hidden parameters with parameter validation enabled.
    6. Subframes with the same names as others in the same tree no longer cause an infinite loop / stack overflow
    7. Link parameters are now sent in the proper order, as long as parameter validation is not turned off.
    8. Parameter validation is now done for requests built from links
    9. Control characters and spaces created by breaking HTML in the middle are now trimmed from link parameters.
   10. Forms with query strings included in the action attribute now are submitted with that string intact.

Additions:
  Content and parsing enhancements:
      1. Disabled submit buttons are now detected, but requests cannot be made from them unless parameter validation is off.