@@ -1,3 +1,5 @@
 build
 *.ipr
 savejars
+dist
+lib
